HTTP Head tests

--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "lint": "eslint .",
     "karma": "karma start --browsers PhantomJS,Firefox --single-run",
     "karma-longrun": "karma start karma.longrun.conf.js --browsers Firefox --single-run",
-    "karma-firefox": "karma start --browsers Firefox --single-run",
-    "karma-phantomjs-debug": "karma start --browsers PhantomJS_Debug --single-run",
     "karma-browsers": "karma start --browsers IE,Chrome,Firefox --single-run",
     "karma-browsers-longrun": "karma start karma.longrun.conf.js --browsers IE,Chrome,Firefox --single-run",
     "karma-coverage": "karma start karma.coverage.conf.js",
     "karma-start": "karma start",
+    "karma-firefox": "karma start --browsers Firefox --single-run",
+    "karma-chrome": "karma start --browsers Chrome --single-run",
+    "karma-phantomjs-debug": "karma start --browsers PhantomJS_Debug --single-run",
     "prehttpbin-install": "python -V && pip -V && virtualenv --version",
     "httpbin-install": "pip install --require-virtualenv -r requirements.txt",
     "httpbin": "python -m httpbin.core --port 64526",
