Add MatchPattern Vireo prim, modeled after LV Match Pattern prim.
MatchPattern(i(String string) i(String pattern) i(Int32 offset)
   o(String beforeStr) o(String matchStr) o(String afterStr) o(Int32 offsetPastMatch)

Match Pattern works on a very simple subset of regular expressions and
does not support | alternation or capture groups or modern PCRE
features.
The full Match Regular Expression prim is not yet supported.

Added minimal Match Pattern unit tests, but it needs to be further
fleshed out.

--- a/Vireo_VS/VireoCommandLine.vcxproj
+++ b/Vireo_VS/VireoCommandLine.vcxproj
@@ -20,6 +20,7 @@
     <ClCompile Include="..\source\core\EventLog.cpp" />
     <ClCompile Include="..\source\core\ExecutionContext.cpp" />
     <ClCompile Include="..\source\core\GenericFunctions.cpp" />
+    <ClCompile Include="..\source\core\MatchPat.cpp" />
     <ClCompile Include="..\source\core\Math.cpp" />
     <ClCompile Include="..\source\core\NumericString.cpp" />
     <ClCompile Include="..\source\core\Platform.cpp" />
