--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
 install:
 - npm install
 - pip install --user -r requirements.txt
-- if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="g++-4.9 -std=c++11"; fi
+- if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
 - git clone --depth 1 https://github.com/ni-kismet/emscripten-sdk.git
 - emscripten-sdk/emsdk activate --build=Release sdk-master-64bit
 - source emscripten-sdk/emsdk_env.sh
@@ -32,7 +32,7 @@ before_script:
 - nohup python -m httpbin.core --port 64526 &
 - while ! nc -q 1 127.0.0.1 64526 </dev/null; do sleep 2; done
 - curl http://127.0.0.1:64526/get?show_env=1
-- make -e
+- make
 script:
 - make testjs
 - make testnative
