Add hidden files but ignore err on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ script:
 - make testnative
 - npm run test
 before_deploy:
-- npm run doxygen
+- npm run doxygen || true
 deploy:
   - provider: npm
     skip_cleanup: true
