Copy exact files instead of err ignore
Trying to copy all .* files results in error on Travis due to . and ..
files, see: https://github.com/shelljs/shelljs/issues/711

So copy exact .nojekyll file instead to prevent error

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ script:
 - make testnative
 - npm run test
 before_deploy:
-- npm run doxygen || true
+- npm run doxygen
 deploy:
   - provider: npm
     skip_cleanup: true
