--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "httpbin": "python -m httpbin.core --port 64526",
     "httpbin-win": "start cmd /c \"env\\Scripts\\activate && npm run httpbin\"",
     "doxygen": "cd source && doxygen",
-    "postdoxygen": "shx cp Documents/DocumentsRoot/.* gh-pages && shx cp Documents/DocumentsRoot/* gh-pages"
+    "postdoxygen": "shx cp Documents/DocumentsRoot/.nojekyll gh-pages && shx cp Documents/DocumentsRoot/* gh-pages"
   },
   "repository": {
     "type": "git",
