Enable doc publish on package version (#259)
* test trusty

* Reduce installs on trusty base image

* Add back g++ version and enable cache

* Update README for WebVI usage

* Check if cache exists

* Track doxygen version

* Include doxygen and prepare for deploy

* Prepare Doxygen for Travis Integration

* Ignore hidden files

* Add hidden files but ignore err on travis

* Copy exact files instead of err ignore

Trying to copy all .* files results in error on Travis due to . and ..
files, see: https://github.com/shelljs/shelljs/issues/711

So copy exact .nojekyll file instead to prevent error

* Switch ghpages deploy to vireobot and ni repo

* Correct README Doxyfile version

* Switch npm deploy to webapps.ops acct

* Remove deadlink and accidental absolute path

--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,7 @@ sample-vis/SampleLVNativeMethod/Canvas2D/DerivedData
 sample-vis/SampleLVNativeMethod/Canvas2D/Canvas2D.xcodeproj/project.xcworkspace/xcuserdata
 sample-vis/SampleLVNativeMethod/Canvas2D/Canvas2D.xcodeproj/xcuserdata
 Vireo_Web/emsdk_portable
-Documents/gh-pages
+gh-pages
 test-it/node_modules
 test-it/temp
 make-it/emsdk_portable
@@ -112,3 +112,5 @@ make-it/make.exe
 env/
 *.tgz
 coverage/
+emscripten-sdk/
+nohup.out
