Fix lint errors for TODO usage, avoiding using namespace,  and header/include-what-you-use
We now have zero lint errors except for the a couple of disabled ones.

The only lint errors still disabled are: enforcing open braces at end of
line, the format of the #ifdef include guard name, and C-style casts.
We also allow line to be up to 160 chars rather than 80.
See the comment at the top of make-it/cpplint/Makefile.

--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -11,7 +11,7 @@ COMMANDLINE = main.cpp
 CORE = Array.cpp Assert.cpp CEntryPoints.cpp Date.cpp EventLog.cpp ExecutionContext.cpp GenericFunctions.cpp MatchPat.cpp Math.cpp NumericString.cpp Platform.cpp Queue.cpp RefNum.cpp String.cpp StringUtilities.cpp Synchronization.cpp TDCodecLVFlat.cpp TDCodecVia.cpp Thread.cpp TimeFunctions.cpp Timestamp.cpp TypeAndDataManager.cpp TypeAndDataReflection.cpp TypeDefiner.cpp TypeTemplates.cpp UnitTest.cpp VirtualInstrument.cpp Waveform.cpp
 UNITTEST = RefNumTest.cpp
 #CORE = VireoMerged.cpp Thread.cpp Timestamp.cpp CEntryPoints.cpp
-IO = FileIO.cpp Canvas2d.cpp DebugGPIO.cpp
+IO = FileIO.cpp Canvas2d.cpp DebugGPIO.cpp HttpClient.cpp
 
 OBJS = $(COMMANDLINEOBJS) $(COREOBJS) $(IOOBJS)
 COMMANDLINEOBJS = $(COMMANDLINE:%.cpp=$(OBJDIR)/%.o)
