--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,7 +8,7 @@ init:
 - cmd: npm -v
 - cmd: python -V
 - cmd: pip -V
-- cmd: firefox -v
+- cmd: reg query "HKLM\SOFTWARE\Mozilla\Mozilla Firefox" /v CurrentVersion
 install:
   - chocolatey install make
 platform:
