Ease back from shx usage in make gnuwin32-coreutils might work, unfortunate that it adds so much stuff to the path, not a fan of global messes like that

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,6 +10,7 @@ init:
 - cmd: pip -V
 install:
   - chocolatey install make
+  - chocolatey install gnuwin32-coreutils.portable
 platform:
   - Win32
 configuration:
