Enable whitespace/braces error in cpplint and fix all occurrences.

--- a/make-it/cpplint/Makefile
+++ b/make-it/cpplint/Makefile
@@ -1,9 +1,8 @@
-LINTARGS = --linelength=160 --filter=-whitespace/braces,-build/header_guard,-readability/casting
+LINTARGS = --linelength=160 --filter=-build/header_guard,-readability/casting
 
 # Ignored warnings:
-# whitespace/braces -- warn if function open brace is on its own line instead of end of previous line; why??
-# readability/casting -- C-style casts.  AQBlock1* casts are common in polymorphic prims and reinterpret_cast would make the code harder to read.
 # build/header_guard -- wants include guard to include file path (_SOURCE_INCLUDE_) prefixes, which is unnecessary since all of our includes are in the same folder
+# readability/casting -- C-style casts.  AQBlock1* casts are common in polymorphic prims and reinterpret_cast would make the code harder to read.
 
 XLINTARGS = $(subst ' ',,$(LINTARGS))
 
