Explicit directory check

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,11 +8,14 @@ init:
 - cmd: npm -v
 - cmd: python -V
 - cmd: pip -V
+- ps: $PSVersionTable
 install:
   - chocolatey install make
   - chocolatey install gnuwin32-coreutils.portable
   - npm install
-  - ps: (new-object net.webclient).DownloadFile('https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-1.35.0-portable-64bit.zip', 'emsdk-1.35.0-portable-64bit.zip')
+  - ps: dir
+  - ps: (new-object net.webclient).DownloadFile('https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-1.35.0-portable-64bit.zip', '.\emsdk-1.35.0-portable-64bit.zip')
+  - ps: dir
   - ps: Expand-Archive .\emsdk-1.35.0-portable-64bit.zip -DestinationPath .\emscripten-sdk
   - emscripten-sdk\emsdk update
   - emscripten-sdk\emsdk list
