Try Bits to download emsdk instead

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,7 +14,9 @@ install:
   - chocolatey install gnuwin32-coreutils.portable
   - npm install
   - ps: dir
-  - ps: (new-object net.webclient).DownloadFile('https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-1.35.0-portable-64bit.zip', '.\emsdk-1.35.0-portable-64bit.zip'); dir; Expand-Archive .\emsdk-1.35.0-portable-64bit.zip -DestinationPath .\emscripten-sdk
+  - ps: Start-BitsTransfer -Source https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-1.35.0-portable-64bit.zip -Destination .\emsdk-1.35.0-portable-64bit.zip
+  - ps: dir
+  - ps: Expand-Archive .\emsdk-1.35.0-portable-64bit.zip -DestinationPath .\emscripten-sdk
   - emscripten-sdk\emsdk update
   - emscripten-sdk\emsdk list
   - emscripten-sdk\emsdk install emscripten-1.35.0
