--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,14 +13,12 @@ install:
   - chocolatey install make
   - chocolatey install gnuwin32-coreutils.portable
   - npm install
-  - ps: dir
   - ps: Start-BitsTransfer -Source https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-1.35.0-portable-64bit.zip -Destination .\emsdk-1.35.0-portable-64bit.zip
-  - ps: dir
   - ps: Expand-Archive .\emsdk-1.35.0-portable-64bit.zip -DestinationPath .\emscripten-sdk
   - emscripten-sdk\emsdk update
-  - emscripten-sdk\emsdk list
   - emscripten-sdk\emsdk install emscripten-1.35.0
   - emscripten-sdk\emsdk activate
+  - emscripten-sdk\emsdk_env.bat
   - emcc -v
 platform:
   - Win32
