--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,7 +17,7 @@ install:
   - ps: Expand-Archive .\emsdk-1.35.0-portable-64bit.zip -DestinationPath .\emscripten-sdk
   - emscripten-sdk\emsdk update
   - emscripten-sdk\emsdk install emscripten-1.35.0
-  - emscripten-sdk\emsdk activate
+  - emscripten-sdk\emsdk activate emscripten-1.35.0
   - emscripten-sdk\emsdk_env.bat
   - emcc -v
 platform:
