See if the gnutools are interfering

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,8 +10,8 @@ init:
 - cmd: pip -V
 - ps: $PSVersionTable
 install:
-  - chocolatey install make
-  - chocolatey install gnuwin32-coreutils.portable
+#  - chocolatey install make
+#  - chocolatey install gnuwin32-coreutils.portable
   - npm install
   - ps: Start-BitsTransfer -Source https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-1.35.0-portable-64bit.zip -Destination .\emsdk-1.35.0-portable-64bit.zip
   - ps: Expand-Archive .\emsdk-1.35.0-portable-64bit.zip -DestinationPath .\emscripten-sdk
