Use make wildcard instead of shell wildcard in make lint def for include files (for windows)

--- a/make-it/cpplint/Makefile
+++ b/make-it/cpplint/Makefile
@@ -17,5 +17,5 @@ include ../Makefile
 COMMANDLINESRCS = $(COMMANDLINE:%.cpp=../../source/CommandLine/%.cpp)
 CORESRCS = $(CORE:%.cpp=../../source/core/%.cpp)
 IOSRCS = $(IO:%.cpp=../../source/io/%.cpp)
-INCSRCS = ../../source/include/*.h
+INCSRCS = $(wildcard ../../source/include/*.h)
 
