Run emscripten build on cmd To try and prevent the python2 No such file or directory issue on windows

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,7 +28,7 @@ before_build:
 build:
   project: Vireo_VS/VireoCommandLine.sln
 after_build:
-  - make vjs
+  - cmd: make vjs
 test_script:
   - make testjs
   - make testnative
