--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,8 +16,8 @@ install:
   - ps: Start-BitsTransfer -Source https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-1.35.0-portable-64bit.zip -Destination .\emsdk-1.35.0-portable-64bit.zip
   - ps: Expand-Archive .\emsdk-1.35.0-portable-64bit.zip -DestinationPath .\emscripten-sdk
   - emscripten-sdk\emsdk update
-  - emscripten-sdk\emsdk install sdk-1.35.0-64bit
-  - emscripten-sdk\emsdk activate sdk-1.35.0-64bit
+  - emscripten-sdk\emsdk install sdk-1.37.9-64bit
+  - emscripten-sdk\emsdk activate sdk-1.37.9-64bit
   - emcc -v
 platform:
   - Win32
@@ -29,7 +29,7 @@ build:
   project: Vireo_VS/VireoCommandLine.sln
 after_build:
   - npm install -g cash-rm cash-touch
-  - cmd /c cd make-it && emmake make -f EmMakefile vjs
+  - make vjs
 test_script:
   - make testjs
   - make testnative
