Qoute commands to get Windows to eval Quote the command prevents the shell from using its own version of mkdir and uses the one on the path

--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -108,7 +108,7 @@ endif
 .DEFAULT_GOAL=help
 
 $(OUTPUT_DIR):
-	@mkdir -p $(OUTPUT_DIR)
+	"mkdir" -p $(OUTPUT_DIR)
 
 install: esh
 	@username=`whoami`; \
@@ -232,7 +232,7 @@ slmicro: $(OBJDIR) ../source/micro/StaticMicroMain.cpp ../source/core/Math.cpp
 	$(CC) -o $@ $(LDFLAGS) $(LDSTATIC) $(OBJDIR)/StaticMicroMain.o $(OBJDIR)/Math.o $(OBJDIR)/DebugGPIO.o $(LIBS) $(OBJDIR)/Queue.o $(OBJDIR)/ExecutionContext.o $(LIBS)
 
 $(OBJDIR):
-	mkdir -p $@
+	"mkdir" -p $@
 
 $(COMMANDLINEOBJS): $(OBJDIR)/%.o: ../source/CommandLine/%.cpp
 	$(CC) $(CFLAGS) -c -o $@ $<
