--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,7 +11,7 @@ init:
 - ps: $PSVersionTable
 install:
   - chocolatey install make
-#  - chocolatey install gnuwin32-coreutils.portable
+  - npm install -g cash-rm cash-touch cash-mkdir
   - npm install
   - ps: Start-BitsTransfer -Source https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-1.35.0-portable-64bit.zip -Destination .\emsdk-1.35.0-portable-64bit.zip
   - ps: Expand-Archive .\emsdk-1.35.0-portable-64bit.zip -DestinationPath .\emscripten-sdk
@@ -23,12 +23,9 @@ platform:
   - Win32
 configuration:
   - Debug
-before_build:
-  - npm run createdirs
 build:
   project: Vireo_VS/VireoCommandLine.sln
 after_build:
-  - npm install -g cash-rm cash-touch
   - make vjs
 test_script:
   - make testjs
