--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
 - emcc -v
 - gcc -v
 before_script:
-- nohup python -m httpbin.core --port 64526 &
+- nohup npm run httpbin &
 - while ! nc -q 1 127.0.0.1 64526 </dev/null; do sleep 2; done
 - curl http://127.0.0.1:64526/get?show_env=1
 - make lint
