--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,7 +25,7 @@ platform:
 configuration:
   - Debug
 before_build:
-  - npm run httpbin-win
+  - start npm run httpbin
 # TODO capture standard out and error to log at the end?
 # TODO script needed to wait for server startup?
 build:
