--- a/.travis.yml
+++ b/.travis.yml
@@ -36,12 +36,14 @@ before_script:
 - while ! nc -q 1 127.0.0.1 64526 </dev/null; do sleep 2; done
 - curl http://127.0.0.1:64526/get?show_env=1
 - make lint
+- npm run lint
 - make
 - make unittest
 script:
 - make testjs
 - make testnative
-- npm run test
+- npm run karma -- --browsers PhantomJS,Firefox
+- npm run karma-longrun -- --browsers Firefox
 before_deploy:
 - npm run doxygen
 deploy:
