Microsoft Edge not on Windows Server 2016 MS recommends using IE11 instead of Edge as Edge is not available on Windows Server 2016 https://docs.microsoft.com/en-us/microsoft-edge/deploy/hardware-and-software-requirements

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -37,5 +37,5 @@ after_build:
 test_script:
   - make testjs
   - make testnative
-  - npm run karma-win
-  - npm run karma-longrun-win
+  - npm run karma -- --browsers PhantomJS,Chrome,Firefox,IE
+  - npm run karma-longrun -- --browsers PhantomJS,Chrome,Firefox,IE
