Remove Phantom from longrun tests

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -38,4 +38,4 @@ test_script:
   - make testjs
   - make testnative
   - npm run karma -- --browsers PhantomJS,Chrome,Firefox,IE
-  - npm run karma-longrun -- --browsers PhantomJS,Chrome,Firefox,IE
+  - npm run karma-longrun -- --browsers Chrome,Firefox,IE
