Appveyor emsdk integration (#273)
This set of changes enables the emscripten builds on appveyor in order to test against IE and Edge

Note:
The following tests were disabled in the browser due to failures:
DateFormatStringLocaleSpecific.via fails in Firefox on Windows (passes all others)
Round.via, Scale2X.via, and StringFormatComplex.via fails in IE11 and Edge (Edge run locally, can't run on CI). It looks like the failure is related to "-NaN" values on those browsers.

Note: AppVeyor is using emscripten 1.37.9, while Travis is using emscripten 1.36.0. Getting Travis on the same version will be in a separate commit.

For downloading the emsdk I tried using webclient as suggested in the AppVeyor docs but it would not show up in the directory it was run from:
(new-object net.webclient).DownloadFile('https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-1.35.0-portable-64bit.zip', '.\emsdk-1.35.0-portable-64bit.zip')

Ended up switching to Bits instead:
Start-BitsTransfer -Source https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-1.35.0-portable-64bit.zip -Destination .\emsdk-1.35.0-portable-64bit.zip

Modern versions of powershell have built-in archive extraction:
Expand-Archive .\emsdk-1.35.0-portable-64bit.zip -DestinationPath .\emscripten-sdk

Was getting the "/usr/bin/env: python2: No such file or directory" error running emcc which is bizarre because it is a Windows build.
I also get that error when using the Github Desktop command shell locally which adds a bunch of unix tools built for Windows to the path.
All Github issues I found were related to having the problem on Mac or Linux, but some also mentioned the issue being fixed in newer releases of Emscripten.
As newer releases of emsdk for Windows were out, switched to emsdk version 1.37.9 and the error stopped both locally in the Github Desktop command shell and on the AppVeyor CI.

Went back and forth on using the gnuwin32 utils. One issue was that mkdir didn't

--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -1,5 +1,9 @@
 # Vireo make file for linux/unix
 
+# The mkdir command has to be quoted so that it is not intercepted in the windows shell
+# and instead uses the version on PATH (ie that is unix mkdir compatible)
+MKDIR="mkdir"
+
 OBJDIR=./objs
 INCDIR=../source/include
 BIN=../bin
@@ -108,7 +112,7 @@ endif
 .DEFAULT_GOAL=help
 
 $(OUTPUT_DIR):
-	@mkdir -p $(OUTPUT_DIR)
+	@$(MKDIR) -p $(OUTPUT_DIR)
 
 install: esh
 	@username=`whoami`; \
@@ -176,8 +180,7 @@ lARMv5:
 
 #========= Use makefile designed for emscripten builds
 vjs: $(OUTPUT_DIR)
-	# Just buid everything
-	make -f EmMakefile vjs
+	emmake make -f EmMakefile vjs
 
 #========= Build documentation
 dox:
@@ -233,7 +236,7 @@ slmicro: $(OBJDIR) ../source/micro/StaticMicroMain.cpp ../source/core/Math.cpp
 	$(CC) -o $@ $(LDFLAGS) $(LDSTATIC) $(OBJDIR)/StaticMicroMain.o $(OBJDIR)/Math.o $(OBJDIR)/DebugGPIO.o $(LIBS) $(OBJDIR)/Queue.o $(OBJDIR)/ExecutionContext.o $(LIBS)
 
 $(OBJDIR):
-	mkdir -p $@
+	@$(MKDIR) -p $@
 
 $(COMMANDLINEOBJS): $(OBJDIR)/%.o: ../source/CommandLine/%.cpp
 	$(CC) $(CFLAGS) -c -o $@ $<
