--- a/.travis.yml
+++ b/.travis.yml
@@ -32,16 +32,18 @@ install:
 - emcc -v
 - gcc -v
 before_script:
-- nohup python -m httpbin.core --port 64526 &
+- nohup npm run httpbin &
 - while ! nc -q 1 127.0.0.1 64526 </dev/null; do sleep 2; done
 - curl http://127.0.0.1:64526/get?show_env=1
 - make lint
+- npm run lint
 - make
 - make unittest
 script:
 - make testjs
 - make testnative
-- npm run test
+- npm run karma -- --browsers PhantomJS,Firefox
+- npm run karma-longrun -- --browsers Firefox
 before_deploy:
 - npm run doxygen
 deploy:
