--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
+    "karma-edge-launcher": "^0.4.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.0",
@@ -24,24 +25,25 @@
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
-    "test": "npm run lint && npm run karma && npm run karma-longrun",
+    "test": "npm run lint && npm run karma -- --browsers Chrome && npm run karma-longrun -- --browsers Chrome",
     "lint": "eslint .",
-    "karma": "karma start --browsers PhantomJS,Firefox --single-run",
-    "karma-longrun": "karma start karma.longrun.conf.js --browsers Firefox --single-run",
-    "karma-browsers": "karma start --browsers IE,Chrome,Firefox --single-run",
-    "karma-browsers-longrun": "karma start karma.longrun.conf.js --browsers IE,Chrome,Firefox --single-run",
+    "karma": "karma start --single-run",
+    "karma-nix": "karma start --single-run --browsers PhantomJS,Chrome,Firefox",
+    "karma-win": "karma start --single-run --browsers PhantomJS,Chrome,Firefox,IE,Edge",
+    "karma-longrun": "karma start karma.longrun.conf.js --single-run",
+    "karma-longrun-nix": "karma start karma.longrun.conf.js --single-run --browsers PhantomJS,Chrome,Firefox",
+    "karma-longrun-win": "karma start karma.longrun.conf.js --single-run --browsers PhantomJS,Chrome,Firefox,IE,Edge",
     "karma-coverage": "karma start karma.coverage.conf.js",
     "karma-start": "karma start",
-    "karma-firefox": "karma start --browsers Firefox --single-run",
-    "karma-chrome": "karma start --browsers Chrome --single-run",
-    "karma-phantomjs-debug": "karma start --browsers PhantomJS_Debug --single-run",
+    "karma-firefox": "karma start  --single-run --browsers Firefox",
+    "karma-chrome": "karma start --single-run --browsers Chrome",
+    "karma-phantomjs-debug": "karma start --single-run --browsers PhantomJS_Debug",
     "prehttpbin-install": "python -V && pip -V && virtualenv --version",
     "httpbin-install": "pip install --require-virtualenv -r requirements.txt",
     "httpbin": "python -m httpbin.core --port 64526",
     "httpbin-win": "start cmd /c \"env\\Scripts\\activate && npm run httpbin\"",
     "doxygen": "cd source && doxygen",
-    "postdoxygen": "shx cp \"Documents/DocumentsRoot/.*\" \"Documents/DocumentsRoot/*\" gh-pages",
-    "createobjs": "shx mkdir -p make-it/objs"
+    "postdoxygen": "shx cp \"Documents/DocumentsRoot/.*\" \"Documents/DocumentsRoot/*\" gh-pages"
   },
   "repository": {
     "type": "git",
