Recreate package-lock.json to fix EINTEGRITY issue
eslint started failing with the concat-stream issue here:
https://github.com/gruntjs/grunt-contrib-imagemin/issues/249

Also noticed the EINTEGRITY warning. Found issue:
https://github.com/npm/npm/issues/16861

delete node_modules and npm install had no effect
npm cache verify said was valid
npm cache clean --force, delete node_modules, npm install had no effect
delete AppData/Roaming/npm and npm-cache and current package-lock.json,
then npm i -g npm, then npm install worked

--- a/package.json
+++ b/package.json
@@ -58,5 +58,6 @@
     "url": "https://github.com/NI/VireoSDK/issues"
   },
   "homepage": "https://github.com/NI/VireoSDK#readme",
-  "main": "source/core/vireo.loader.js"
+  "main": "source/core/vireo.loader.js",
+  "dependencies": {}
 }
