--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine-spec-tags": "^1.0.1",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-verbose-reporter": "^0.0.6",
     "requirejs": "^2.3.2",
@@ -29,7 +30,7 @@
     "lint": "eslint .",
     "karma": "karma start --single-run",
     "karma-nix": "karma start --single-run --browsers PhantomJS,Chrome,Firefox",
-    "karma-win": "karma start --single-run --browsers PhantomJS,Chrome,Firefox,IE,Edge",
+    "karma-win": "karma start --single-run --browsers PhantomJS --skip-tags FailsPhantomJS && karma start --single-run --browsers Chrome,Firefox,IE,Edge",
     "karma-longrun": "karma start karma.longrun.conf.js --single-run",
     "karma-longrun-nix": "karma start karma.longrun.conf.js --single-run --browsers PhantomJS,Chrome,Firefox",
     "karma-longrun-win": "karma start karma.longrun.conf.js --single-run --browsers PhantomJS,Chrome,Firefox,IE,Edge",
@@ -40,7 +41,7 @@
     "karma-phantomjs-debug": "karma start --single-run --browsers PhantomJS_Debug",
     "prehttpbin-install": "python -V && pip -V && virtualenv --version",
     "httpbin-install": "pip install --require-virtualenv -r requirements.txt",
-    "httpbin": "python -m httpbin.core --port 64526",
+    "httpbin": "python -m httpbin.core --port 64526 --host 0.0.0.0",
     "httpbin-win": "start cmd /c \"env\\Scripts\\activate && npm run httpbin\"",
     "doxygen": "cd source && doxygen",
     "postdoxygen": "shx cp \"Documents/DocumentsRoot/.*\" \"Documents/DocumentsRoot/*\" gh-pages"
