--- a/package.json
+++ b/package.json
@@ -28,16 +28,10 @@
   "scripts": {
     "test": "npm run lint && npm run karma -- --browsers Chrome && npm run karma-longrun -- --browsers Chrome",
     "lint": "eslint .",
-    "karma": "karma start --single-run",
-    "karma-nix": "karma start --single-run --browsers PhantomJS,Chrome,Firefox",
-    "karma-win": "karma start --single-run --browsers PhantomJS --skip-tags FailsPhantomJS && karma start --single-run --browsers Chrome,Firefox,IE,Edge",
-    "karma-longrun": "karma start karma.longrun.conf.js --single-run",
-    "karma-longrun-nix": "karma start karma.longrun.conf.js --single-run --browsers PhantomJS,Chrome,Firefox",
-    "karma-longrun-win": "karma start karma.longrun.conf.js --single-run --browsers PhantomJS,Chrome,Firefox,IE,Edge",
-    "karma-coverage": "karma start karma.coverage.conf.js",
     "karma-start": "karma start",
-    "karma-firefox": "karma start  --single-run --browsers Firefox",
-    "karma-chrome": "karma start --single-run --browsers Chrome",
+    "karma-win": "karma start --single-run --browsers PhantomJS --skip-tags FailsPhantomJS,Slow && karma start --single-run --browsers Chrome,Firefox,IE,Edge",
+    "karma-coverage": "karma start karma.coverage.conf.js",
+    "karma-chrome": "karma start --single-run --browsers Chrome --skip-tags Slow",
     "karma-phantomjs-debug": "karma start --single-run --browsers PhantomJS_Debug",
     "prehttpbin-install": "python -V && pip -V && virtualenv --version",
     "httpbin-install": "pip install --require-virtualenv -r requirements.txt",
