--- a/.travis.yml
+++ b/.travis.yml
@@ -42,9 +42,8 @@ before_script:
 script:
 - make testjs
 - make testnative
-- npm run karma -- --browsers PhantomJS --skip-tags FailsPhantomJS
+- npm run karma -- --browsers PhantomJS --skip-tags FailsPhantomJS,Slow
 - npm run karma -- --browsers Firefox
-- npm run karma-longrun -- --browsers Firefox
 before_deploy:
 - npm run doxygen
 deploy:
