--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
 - export DISPLAY=:99.0
 - export TZ=CST6CDT
 - sh -e /etc/init.d/xvfb start
+- npm install npm@latest -g
 - node -v
 - npm -v
 - python -V
