Fix case of name Note that the provider name GitHub is case sensitive (e.g. not Github). :( https://www.appveyor.com/docs/deployment/github/

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -48,7 +48,7 @@ artifacts:
     name: esh_i686-pc-windows-msvc
     type: File
 deploy:
-  provider: Github
+  provider: GitHub
   description: 'test deploy'
   auth_token:
     secure: EMHIMInThBDaSSOuGwntAOQYeqNkwNqx7Za0qlSqiFhC7UG4Q4BCKyey5k4ATi2m
