--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -46,15 +46,15 @@ test_script:
 after_test:
   - 7z a esh_i686-pc-windows-msvc_debug.zip %APPVEYOR_BUILD_FOLDER%\dist\Debug\esh.exe %APPVEYOR_BUILD_FOLDER%\dist\Debug\esh.pdb %APPVEYOR_BUILD_FOLDER%\README.md %APPVEYOR_BUILD_FOLDER%\LICENSE.txt
 artifacts:
-  - path: esh_i686-pc-windows-msvc.zip
-    name: esh_i686-pc-windows-msvc
+  - path: esh_i686-pc-windows-msvc_debug.zip
+    name: esh_i686-pc-windows-msvc_debug.zip
     type: Zip
 deploy:
   provider: GitHub
   description: $(APPVEYOR_REPO_COMMIT_MESSAGE)
   auth_token:
     secure: EMHIMInThBDaSSOuGwntAOQYeqNkwNqx7Za0qlSqiFhC7UG4Q4BCKyey5k4ATi2m
-  artifact: esh_i686-pc-windows-msvc
+  artifact: esh_i686-pc-windows-msvc_debug.zip
   force_update: true
   on:
     appveyor_repo_tag: true
